# deiGo

./: CMakeLists.txt  README.md  compile.sh  gocompiler.l  gocompiler.y  gocompiler_ast.c  gocompiler_ast.h  gocompiler_code_gen.c  gocompiler_code_gen.h  gocompiler_semantics.c  gocompiler_semantics.h  gocompiler_structures.c  gocompiler_structures.h  gocompiler_symtab.c  gocompiler_symtab.h
